--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <h1 id="title">To-do List:</h1>
   <input type="text" name="" id="enterTxt">
   <button id="submit-button">Add To-do</button>
-  <ul id="tod-list"></ul>
+  <ul id="todo-list"></ul>
 </body>
 </html>
