--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h1 id="title">To-do List:</h1>
   <input type="text" name="" id="enterTxt">
   <button id="submit-button">Add To-do</button>
+  <button id="reset">Reset</button>
   <ul id="todo-list"></ul>
 </body>
 </html>
